# onchain-ruby/lib/onchain-api.rb
@@ -22,12 +22,16 @@ require 'onchain-api/models/balance_address_reply'
 require 'onchain-api/models/balance_reply'
 require 'onchain-api/models/balances_reply'
 require 'onchain-api/models/coin_type'
+require 'onchain-api/models/erc20_transaction_request'
 require 'onchain-api/models/ethereum_transaction_reply'
+require 'onchain-api/models/ethereum_transaction_request'
+require 'onchain-api/models/ethereum_transaction_send_request'
 require 'onchain-api/models/google_protobuf_any'
 require 'onchain-api/models/grpc_gateway_runtime_error'
 require 'onchain-api/models/hash_to_sign'
 require 'onchain-api/models/history_reply'
 require 'onchain-api/models/history_reply_tx'
+require 'onchain-api/models/multi_sig_transaction_request'
 require 'onchain-api/models/raw_transaction_send_request'
 require 'onchain-api/models/transaction_recipient'
 require 'onchain-api/models/transaction_reply'
@@ -37,6 +41,9 @@ require 'onchain-api/models/transaction_send_request'
 
 # APIs
 require 'onchain-api/api/address_api'
+require 'onchain-api/api/erc20_transaction_api'
+require 'onchain-api/api/ethereum_transaction_api'
+require 'onchain-api/api/multi_sig_transaction_api'
 require 'onchain-api/api/transaction_api'
 
 module OnchainApi
